--- a/huh.lpi
+++ b/huh.lpi
@@ -15,6 +15,33 @@
     </General>
     <BuildModes>
       <Item Name="Default" Default="True"/>
+      <Item Name="AROS">
+        <CompilerOptions>
+          <Version Value="11"/>
+          <Target>
+            <Filename Value="huh"/>
+          </Target>
+          <SearchPaths>
+            <IncludeFiles Value="$(ProjOutDir)"/>
+            <UnitOutputDirectory Value="lib/$(TargetCPU)-$(TargetOS)"/>
+          </SearchPaths>
+          <CodeGeneration>
+            <SmartLinkUnit Value="True"/>
+            <RelocatableUnit Value="True"/>
+            <TargetCPU Value="i386"/>
+            <TargetOS Value="aros"/>
+            <Optimizations>
+              <OptimizationLevel Value="3"/>
+            </Optimizations>
+          </CodeGeneration>
+          <Linking>
+            <Debugging>
+              <GenerateDebugInfo Value="False"/>
+              <UseLineInfoUnit Value="False"/>
+            </Debugging>
+          </Linking>
+        </CompilerOptions>
+      </Item>
     </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
@@ -47,6 +74,11 @@
       <Unit>
         <Filename Value="generalwinunit.pas"/>
         <IsPartOfProject Value="True"/>
+      </Unit>
+      <Unit>
+        <Filename Value="screenshotwinunit.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="ScreenShotWinUnit"/>
       </Unit>
     </Units>
   </ProjectOptions>
